syntax = "proto3";


option csharp_namespace = "GrowattShine2Mqtt.Schema";

package growatt2mqtt.testapi;

service GrowattTestService {
  rpc ListDataloggers(ListDataloggersRequest) returns (ListDataloggersResponse);
  rpc GetDataLoggerInfo(GetDataLoggerInfoRequest) returns (GetDataLoggerInfoResponse);
  rpc QueryDatalogger(QueryDataLoggerRequest) returns (QueryDataLoggerResponse);
  rpc CommandDatalogger(CommandDataLoggerRequest) returns (CommandDataLoggerResponse);
  rpc QueryInverter(QueryInverterRequest) returns (QueryInverterResponse);
  rpc CommandInverter(CommandInverterRequest) returns (CommandInverterResponse);
}

message ListDataloggersRequest { }
message ListDataloggersResponse {
	repeated string dataloggers = 1;
}

message GetDataLoggerInfoRequest {
	string datalogger = 1;
}
message GetDataLoggerInfoResponse {
	string datalogger = 1;
    map<uint32, bytes> datalogger_registers = 2;
    map<uint32, uint32> inverter_registers = 3;
}

message QueryDataLoggerRequest {
	string datalogger = 1;
    uint32 start_register = 2;
    uint32 end_register = 3;
}
message QueryDataLoggerResponse {
}

message CommandDataLoggerRequest {
	string datalogger = 1;
    uint32 register = 2;
    bytes value = 3;
}
message CommandDataLoggerResponse {

}

message QueryInverterRequest {
	string datalogger = 1;
    uint32 start_register = 2;
    uint32 end_register = 3;
}
message QueryInverterResponse {}

message CommandInverterRequest {
	string datalogger = 1;
    uint32 register = 2;
    uint32 value = 3;
}
message CommandInverterResponse {}
